src/objects/Related_Country__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Studies / Requests</relationshipLabel>
        <relationshipName>RWE_Request_Countries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>STUDY for which Countries benefit from</description>
        <inlineHelpText>STUDY for which Countries benefit from</inlineHelpText>
        <label>Study for which Countries benefit from</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Countries benefiting from Study</relationshipLabel>
        <relationshipName>RWE_Related_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Countries Supported by this Request</relationshipLabel>
        <relationshipName>RWE_Request_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_StudyBenifitCountry_TF__c</fullName>
        <label>Unique StudyBenifitCountry TF</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Related Country</label>
    <nameField>
        <displayFormat>RWE-RC-{000000000}</displayFormat>
        <label>Related Country ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>